[project]
name = "pyhaptic"
version = "0.0.0"
requires-python = ">=3.9"
authors = [{ name = "Louis Gevers", email = "louis.gevers@epfl.ch" }]
description = "Python bindings for Force Dimension Haptic SDK."
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=42", "cmake>=3.12", "wheel", "ninja"]
build-backend = "setuptools.build_meta"